# daily-ai-digest

./: .env.example  .gitignore  QUICKSTART.md  README.md  SCRAPER_UPDATE.md  STEP2_EMBEDDINGS.md  config.py  main.py  pyproject.toml  requirements.txt  test_embeddings.py  test_scraper.py  test_search.py  u-chance-ai-search-poc.md
app/: streamlit_app.py
embeddings/: batch_embed.py  bedrock_client.py
scraper/: product_scraper.py  utils.py
search/: query_handler.py  vector_store.py
